--- a/src/app/main/about/about.css
+++ b/src/app/main/about/about.css
@@ -178,7 +178,7 @@
 
 .slider-img {
   width: 100%;
-  height: auto;
+  height: 25em;
   aspect-ratio: 16 / 9;
   object-fit: cover;
   transition: transform 0.5s ease;
