--- a/src/app/projects/projects.html
+++ b/src/app/projects/projects.html
@@ -31,7 +31,7 @@
           <!-- Slide wrapper -->
           <div class="slides-wrapper">
             <div class="slides" [style.transform]="getTransform()">
-              <img *ngFor="let img of images[0]" [src]="img" class="slide-img" />
+              <img *ngFor="let img of images[0]; let idx = index" [src]="img" class="slide-img" [class.active]="idx === currentIndex" />
             </div>
           </div>
 
@@ -48,8 +48,6 @@
                 class="thumb-img" />
           </div>
         </div>
-
-  
       </div>
     </section>
 
@@ -80,7 +78,12 @@
           <!-- Slide wrapper -->
           <div class="slides-wrapper">
             <div class="slides" [style.transform]="getTransform()">
-              <img *ngFor="let img of images[1]" [src]="img" class="slide-img project-img" />
+              <img 
+                *ngFor="let img of images[1]; let idx = index"
+                [src]="img" 
+                class="slide-img project-img"
+                [class.active]="idx === currentIndex"/>
+
             </div>
           </div>
 
@@ -126,7 +129,8 @@
           <!-- Slide wrapper -->
           <div class="slides-wrapper">
             <div class="slides" [style.transform]="getTransform()">
-              <img *ngFor="let img of images[2]" [src]="img" class="slide-img project-img" />
+              <img *ngFor="let img of images[2]; let idx = index" [src]="img" class="slide-img" [class.active]="idx === currentIndex" />
+            
             </div>
           </div>
 
@@ -171,7 +175,7 @@
           <!-- Slide wrapper -->
           <div class="slides-wrapper">
             <div class="slides" [style.transform]="getTransform()">
-              <img *ngFor="let img of images[3]" [src]="img" class="slide-img project-img" />
+              <img *ngFor="let img of images[3]; let idx = index" [src]="img" class="slide-img" [class.active]="idx === currentIndex" />
             </div>
           </div>
 
@@ -218,7 +222,7 @@
           <!-- Slide wrapper -->
           <div class="slides-wrapper">
             <div class="slides" [style.transform]="getTransform()">
-              <img *ngFor="let img of images[4]" [src]="img" class="slide-img project-img" />
+              <img *ngFor="let img of images[4]; let idx = index" [src]="img" class="slide-img project-img" [class.active]="idx === currentIndex" />
             </div>
           </div>
 
@@ -263,7 +267,7 @@
           <!-- Slide wrapper -->
           <div class="slides-wrapper">
             <div class="slides" [style.transform]="getTransform()">
-              <img *ngFor="let img of images[5]" [src]="img" class="slide-img project-img" />
+              <img *ngFor="let img of images[5]; let idx = index" [src]="img" class="slide-img project-img" [class.active]="idx === currentIndex" />
             </div>
           </div>
 
