open image in larger view

--- a/src/app/experience/experience.html
+++ b/src/app/experience/experience.html
@@ -1,7 +1,7 @@
 <div class="experience-wrapper">
   <div class="module-heading text-center">
-    <h2 class="heading">Professional Experience</h2>
-    <p class="subtitle">Driven by curiosity, shaped by real-world projects</p>
+    <h2 class="heading">Career Highlights</h2>
+    <p class="subtitle">From challenges to achievements, here’s what defines my journey</p>
   </div>
 
   <div class="timeline-container">
